v5 build now works with jlink